<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Screen Share</string>
    <string name="share_screen">Share Screen</string>
    <string name="view_screen">View Screen</string>
    <string name="your_pin">Your PIN Code:</string>
    <string name="enter_pin">Enter PIN Code</string>
    <string name="connect">Connect</string>
    <string name="stop_sharing">Stop Sharing</string>
    <string name="disconnect">Disconnect</string>
    <string name="sharing_screen">Sharing Screen...</string>
    <string name="waiting_connection">Waiting for connection...</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting...</string>
</resources>
